Finish rename: change references to 'qruntime'
This only really touched printable strings. Yay relative imports!

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "spellserver",
+  "name": "qruntime",
   "version": "0.0.1",
   "lib": "js/lib",
   "dependencies": {
     "express": "2.5.9"
   },
   "scripts": {
-    "ssp": "./js/scripts/ssp.js"
+    "qrt": "./js/scripts/qrt.js"
   }
 }
